backg-img fixed

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,6 @@
                 <a class="header-menu-item" href="#history" target="_self"
                   >history</a
                 >
-
               </li>
               <li class="header-menu-list">
                 <a class="header-menu-item" href="#contact" target="_self"
@@ -94,7 +93,7 @@
                 Las Vegas Festival 2010, New Noise Music Festival, Neon Reverb
                 Festival, and Fork Fest.
               </p>
-   <button type="button" class="play disco01">play</button>
+              <button type="button" class="play disco01">play</button>
             </li>
             <li class="disco-list-item">
               <span class="article-year">2012</span>
@@ -114,7 +113,7 @@
               </p>
               <button type="button" class="play disco02">play</button>
             </li>
-            <li class="">
+            <li class="disco-list-item">
               <span class="article-year">2015</span>
               <h5 class="pre-title">Smoke + Mirrors</h5>
               <h3 class="article-title">
@@ -166,8 +165,8 @@
               <svg class="button-icon">
                 <use
                   href="img/svg/SVG-sprite.svg#right-chevron"
-                  xlink:href="img/svg/SVG-sprite.svg#right-chevron">
-                </use>
+                  xlink:href="img/svg/SVG-sprite.svg#right-chevron"
+                ></use>
               </svg>
             </a>
           </div>
@@ -451,14 +450,6 @@
         </header>
         <ul class="lead-singer-songs container list">
           <li class="lead-singer-item digital_one">
-
-            <img
-              class="lead-singer-image"
-              src="img/newtrack01.jpg"
-              alt=""
-              width="384"
-              height="422"
-            />
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">03.04.2015</span>
               <p class="lead-singer-album">Chill Nation</p>
@@ -476,7 +467,6 @@
           </li>
 
           <li class="lead-singer-item digital_two">
-            <img src="img/newtrack02.jpg" alt="" width="384" height="422" />
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">01.03.2015</span>
               <p class="lead-singer-album">Chill Nation</p>
@@ -490,7 +480,6 @@
           </li>
 
           <li class="lead-singer-item digital_three">
-            <img src="img/newtrack03.jpg" alt="" width="384" height="422" />
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">04.04.2015</span>
               <p class="lead-singer-album">Chill Nation</p>
@@ -504,7 +493,6 @@
           </li>
 
           <li class="lead-singer-item digital_four">
-            <img src="img/newtrack04.jpg" alt="" width="384" height="422" />
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">01.07.2015</span>
               <p class="lead-singer-album">Chill Nation</p>
@@ -518,7 +506,6 @@
           </li>
 
           <li class="lead-singer-item digital_five">
-            <img src="img/newtrack05.jpg" alt="" width="384" height="422" />
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">02.11.2015</span>
               <p class="lead-singer-album">Chill Nation</p>
@@ -533,7 +520,6 @@
           </li>
 
           <li class="lead-singer-item digital_six">
-            <img src="img/newtrack06.jpg" alt="" width="384" height="422" />
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">06.09.2015</span>
               <p class="lead-singer-album">Chill Nation</p>
@@ -623,35 +609,34 @@
             <button type="submit">Send</button>
           </form>
           <div class="icons-form">
-              <ul class="icons-form-list">
-                <li class="icons-list-item">
-                  <svg class="icons-form-facebook">
-                    <use
-                      href="img/svg/SVG-sprite.svg#facebook-letter-logo"
-                      xlink:href="img/svg/SVG-sprite.svg#facebook-letter-logo"
-                    ></use>
-                  </svg>
-                </li>
-                <li class="icons-list-item">
-                  <svg class="icons-form-instagram">
-                    <use
-                      href="img/svg/SVG-sprite.svg#social-media"
-                      xlink:href="img/svg/SVG-sprite.svg#social-media"
-                    ></use>
-                  </svg>
-                </li>
-                <li class="icons-list-item">
-                  <svg class="icons-form-twitter">
-                    <use
-                      href="img/svg/SVG-sprite.svg#tweet"
-                      xlink:href="img/svg/SVG-sprite.svg#tweet"
-                    ></use>
-                  </svg>
-                </li>
-              </ul>
-            </div>
-            </div>
-        
+            <ul class="icons-form-list">
+              <li class="icons-list-item">
+                <svg class="icons-form-facebook">
+                  <use
+                    href="img/svg/SVG-sprite.svg#facebook-letter-logo"
+                    xlink:href="img/svg/SVG-sprite.svg#facebook-letter-logo"
+                  ></use>
+                </svg>
+              </li>
+              <li class="icons-list-item">
+                <svg class="icons-form-instagram">
+                  <use
+                    href="img/svg/SVG-sprite.svg#social-media"
+                    xlink:href="img/svg/SVG-sprite.svg#social-media"
+                  ></use>
+                </svg>
+              </li>
+              <li class="icons-list-item">
+                <svg class="icons-form-twitter">
+                  <use
+                    href="img/svg/SVG-sprite.svg#tweet"
+                    xlink:href="img/svg/SVG-sprite.svg#tweet"
+                  ></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </div>
 
         <!--
           <div class="signup">
