--- a/src/index.html
+++ b/src/index.html
@@ -252,7 +252,7 @@
                 </ul>
               </div>
             </div>
-            <img src="img/latter01.jpg" alt="latter01" />
+            <img src="img/latter01.jpg" alt="latter01" , sans-serif />
           </li>
           <li class="latter-compositions-item">
             <div class="latter-compositions-wrapper">
@@ -318,7 +318,12 @@
                 </ul>
               </div>
             </div>
-            <img src="img/latter02.jpg" alt="latter02" />
+            <img
+              src="img/latter02.jpg"
+              alt="latter02"
+              width="600"
+              height="422"
+            />
           </li>
 
           <li class="latter-compositions-item">
@@ -385,7 +390,12 @@
                 </ul>
               </div>
             </div>
-            <img src="img/latter03.jpg" alt="latter-03" />
+            <img
+              src="img/latter03.jpg"
+              alt="latter-03"
+              width="600"
+              height="422"
+            />
           </li>
         </ul>
       </section>
@@ -479,9 +489,7 @@
             </div>
           </li>
 
-
           <li class="lead-singer-item digital_three digital_bgr lead_number">
-
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">04.04.2015</span>
               <p class="lead-singer-album">Chill Nation</p>
@@ -494,9 +502,7 @@
             </div>
           </li>
 
-
           <li class="lead-singer-item digital_four digital_bgr lead_number">
-
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">01.07.2015</span>
               <p class="lead-singer-album">Chill Nation</p>
@@ -509,9 +515,7 @@
             </div>
           </li>
 
-
           <li class="lead-singer-item digital_five digital_bgr lead_number">
-
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">02.11.2015</span>
               <p class="lead-singer-album">Chill Nation</p>
@@ -526,7 +530,6 @@
           </li>
 
           <li class="lead-singer-item digital_six digital_bgr lead_number">
-
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">06.09.2015</span>
               <p class="lead-singer-album">Chill Nation</p>
@@ -543,23 +546,23 @@
         <header class="upcoming-head">
           <h2 class="upcoming-title title-h2">Upcoming Events</h2>
           <div>
-          <h3 class="upcoming-item">Smoke + Mirrors Tour</h3>
-          <p class="upcoming-adress">
-            2-2-15 Hokukoryokuchi, Konohana Ward,<br />
-            554-0042 Osaka Prefecture Osaka
-          </p>
-          <p class="upcoming-date">01.04.2015</p>
-          <h3 class="upcoming-item">Smoke + Mirrors Tour</h3>
-          <p class="upcoming-descr">
-            When the last-minute request is for a focus group, it’s usually a
-            sign that the request originated in Marketing. When Web sites are
-            being designed, the folks in Marketing often feel like they don’t
-            have much clout. Even though they’re the ones who spend the most
-            time trying to figure out who the site’s audience is and what they
-            want, the designers and developers are the ones with most of the
-            hands-on control over how the site actually gets put together.
-          </p>
-          <p class="upcoming-date-next">27.05.2015</p>
+            <h3 class="upcoming-item">Smoke + Mirrors Tour</h3>
+            <p class="upcoming-adress">
+              2-2-15 Hokukoryokuchi, Konohana Ward,<br />
+              554-0042 Osaka Prefecture Osaka
+            </p>
+            <p class="upcoming-date">01.04.2015</p>
+            <h3 class="upcoming-item">Smoke + Mirrors Tour</h3>
+            <p class="upcoming-descr">
+              When the last-minute request is for a focus group, it’s usually a
+              sign that the request originated in Marketing. When Web sites are
+              being designed, the folks in Marketing often feel like they don’t
+              have much clout. Even though they’re the ones who spend the most
+              time trying to figure out who the site’s audience is and what they
+              want, the designers and developers are the ones with most of the
+              hands-on control over how the site actually gets put together.
+            </p>
+            <p class="upcoming-date-next">27.05.2015</p>
           </div>
         </header>
       </section>
@@ -589,104 +592,60 @@
         </header>
       </section>
 
-      <section class="contact-section">
+      <footer class="contact-section">
         <header class="contact-head">
           <h2 class="contact-title title-h2">Contact</h2>
           <p class="contact-text">
             Canada Island, Division No. 23, Unorganized, MB, Canada
           </p>
           <p class="contact-tel">Tel. +1(778)288 5180</p>
-          <div class="contact-us-div">
-            <form class="contact-us-form" method="POST" id="user_form">
-              <div class="group">
-                <input type="text" id="name" required />
-                <span class="bar"></span> <label for="name">Name</label>
-              </div>
-              <div class="group">
-                <input type="email" id="email" required />
-                <span class="bar"></span> <label for="email">Email</label>
-              </div>
-              <div class="group">
-                <input type="text" id="message" required />
-                <span class="bar"></span> <label for="message">Message</label>
-              </div>
-              <!--
-                <textarea name="customer-message" placeholder="Your message *" required wrap="soft" form="user_request"></textarea>
-              -->
-              <button type="submit">Send</button>
-            </form>
-            <div class="icons-form">
-                <ul class="icons-form-list">
-                  <li class="icons-list-item">
-                    <svg class="icons-form-facebook">
-                      <use
-                        href="img/svg/SVG-sprite.svg#facebook-letter-logo"
-                        xlink:href="img/svg/SVG-sprite.svg#facebook-letter-logo"
-                      ></use>
-                    </svg>
-                  </li>
-                  <li class="icons-list-item">
-                    <svg class="icons-form-instagram">
-                      <use
-                        href="img/svg/SVG-sprite.svg#social-media"
-                        xlink:href="img/svg/SVG-sprite.svg#social-media"
-                      ></use>
-                    </svg>
-                  </li>
-                  <li class="icons-list-item">
-                    <svg class="icons-form-twitter">
-                      <use
-                        href="img/svg/SVG-sprite.svg#tweet"
-                        xlink:href="img/svg/SVG-sprite.svg#tweet"
-                      ></use>
-                    </svg>
-                  </li>
-                </ul>
-              </div>
-              </div>
         </header>
-        <!-- --NEW FORM -->
-
-        
-
-        <!--
-          <div class="signup">
-            <form class="signup-form" action="">
-              <ul class="signup-form-list">
-                <li class="signup-form-item">
-                  <input type="name" placeholder="Name" required />
-                </li>
-                <li class="signup-form-item">
-                  <input
-                    type="email"
-                    name="email"
-                    id=""
-                    placeholder="E mail"
-                    required
-                  />
-                </li>
-                <li class="signup-form-item">
-                  <textarea
-                    name="message"
-                    id=""
-                    cols="30"
-                    rows="10"
-                    placeholder="Message"
-                  ></textarea>
-                </li>
-              </ul>
-              <button type="submit" class="button-form">Send</button>
-            </form>
-            <div class="icons-form">
-              <ul class="icons-form-list">
-                <li class="icons-list-item icon-facebook"></li>
-                <li class="icons-list-item icon-instagram"></li>
-                <li class="icons-list-item icon-twitter"></li>
-              </ul>
+        <div class="contact-us-div">
+          <form class="contact-us-form" method="POST" id="user_form">
+            <div class="group">
+              <input type="text" id="name" required />
+              <span class="bar"></span> <label for="name">Name</label>
             </div>
+            <div class="group">
+              <input type="email" id="email" required />
+              <span class="bar"></span> <label for="email">Email</label>
+            </div>
+            <div class="group">
+              <input type="text" id="message" required />
+              <span class="bar"></span> <label for="message">Message</label>
+            </div>
+            <button type="submit">Send</button>
+          </form>
+          <div class="icons-form">
+            <ul class="icons-form-list">
+              <li class="icons-list-item">
+                <svg class="icons-form-facebook">
+                  <use
+                    href="img/svg/SVG-sprite.svg#facebook-letter-logo"
+                    xlink:href="img/svg/SVG-sprite.svg#facebook-letter-logo"
+                  ></use>
+                </svg>
+              </li>
+              <li class="icons-list-item">
+                <svg class="icons-form-instagram">
+                  <use
+                    href="img/svg/SVG-sprite.svg#social-media"
+                    xlink:href="img/svg/SVG-sprite.svg#social-media"
+                  ></use>
+                </svg>
+              </li>
+              <li class="icons-list-item">
+                <svg class="icons-form-twitter">
+                  <use
+                    href="img/svg/SVG-sprite.svg#tweet"
+                    xlink:href="img/svg/SVG-sprite.svg#tweet"
+                  ></use>
+                </svg>
+              </li>
+            </ul>
           </div>
-        -->
-      </section>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
