debug last commit

--- a/src/index.html
+++ b/src/index.html
@@ -208,7 +208,6 @@
                     ></use>
                   </svg>
                 </button>
-
                 <ul class="latter-compositions-list">
                   <li class="latter-compositions-icons">
                     <svg class="icon">
@@ -219,7 +218,6 @@
                     </svg>
                     <span class="icons-audio-descr">182,364</span>
                   </li>
-
                   <li class="latter-compositions-icons">
                     <svg class="icon">
                       <use
@@ -229,7 +227,6 @@
                     </svg>
                     <span class="icons-heart-descr">10k</span>
                   </li>
-
                   <li class="latter-compositions-icons">
                     <svg class="icon">
                       <use
@@ -239,7 +236,6 @@
                     </svg>
                     <span class="icons-options-descr">3k</span>
                   </li>
-
                   <li class="latter-compositions-icons">
                     <svg class="icon">
                       <use
@@ -252,7 +248,12 @@
                 </ul>
               </div>
             </div>
-            <img src="img/latter01.jpg" alt="latter01" , sans-serif />
+            <img
+              src="img/latter01.jpg"
+              alt="latter01"
+              width="600"
+              height="422"
+            />
           </li>
           <li class="latter-compositions-item">
             <div class="latter-compositions-wrapper">
@@ -277,7 +278,6 @@
                     ></use>
                   </svg>
                 </button>
-
                 <ul class="latter-compositions-list">
                   <li class="latter-compositions-icons">
                     <svg class="icon">
@@ -325,7 +325,6 @@
               height="422"
             />
           </li>
-
           <li class="latter-compositions-item">
             <div class="latter-compositions-wrapper">
               <span class="latter-compositions-year">03.04.2015</span>
@@ -349,7 +348,6 @@
                     ></use>
                   </svg>
                 </button>
-
                 <ul class="latter-compositions-list">
                   <li class="latter-compositions-icons">
                     <svg class="icon">
@@ -423,7 +421,6 @@
                 ></use>
               </svg>
             </div>
-
             <p class="lead-singer-about">
               In 2008, lead singer Dan Reynolds met <br />
               drummer Andrew Tolman at Brigham Young University where they were
@@ -488,7 +485,6 @@
               </p>
             </div>
           </li>
-
           <li class="lead-singer-item digital_three digital_bgr lead_number">
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">04.04.2015</span>
@@ -501,7 +497,6 @@
               </p>
             </div>
           </li>
-
           <li class="lead-singer-item digital_four digital_bgr lead_number">
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">01.07.2015</span>
@@ -514,7 +509,6 @@
               </p>
             </div>
           </li>
-
           <li class="lead-singer-item digital_five digital_bgr lead_number">
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">02.11.2015</span>
@@ -528,7 +522,6 @@
               </p>
             </div>
           </li>
-
           <li class="lead-singer-item digital_six digital_bgr lead_number">
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">06.09.2015</span>
