--- a/src/index.html
+++ b/src/index.html
@@ -252,7 +252,7 @@
                 </ul>
               </div>
             </div>
-            <img src="img/latter01.jpg" alt="latter01" />
+            <img class="letter-img" src="img/latter01.jpg" alt="latter01" />
           </li>
           <li class="latter-compositions-item">
             <div class="latter-compositions-wrapper">
@@ -318,7 +318,7 @@
                 </ul>
               </div>
             </div>
-            <img src="img/latter02.jpg" alt="latter02" />
+            <img class="letter-img" src="img/latter02.jpg" alt="latter02" />
           </li>
 
           <li class="latter-compositions-item">
@@ -385,7 +385,7 @@
                 </ul>
               </div>
             </div>
-            <img src="img/latter03.jpg" alt="latter-03" />
+            <img class="letter-img" src="img/latter03.jpg" alt="latter-03" />
           </li>
         </ul>
       </section>
