DeskTop first_try

--- a/src/index.html
+++ b/src/index.html
@@ -266,7 +266,7 @@
             <img class="letter-img" src="img/latter01.jpg" alt="latter01" />
 
           </li>
-          <li class="latter-compositions-item">
+          <li class="latter-compositions-item reverse">
             <div class="latter-compositions-wrapper">
               <span class="latter-compositions-year">20.07.2015</span>
               <h5 class="latter-compositions-album">Indian Sammer Remix</h5>
@@ -458,7 +458,7 @@
             </div>
           </div>
         </header>
-        <ul class="lead-singer-songs container list">
+        <ul class="lead-singer-songs">
           <li class="lead-singer-item digital_one digital_bgr lead_number">
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">03.04.2015</span>
