--- a/src/index.html
+++ b/src/index.html
@@ -74,8 +74,8 @@
             </p>
           </header>
           <ul class="disco-list">
-            <li class="disco-list-item">
-              <div>
+            <li class="disco-list-item flex">
+              <div class="disco-list-item-div">
                 <span class="article-year">2010</span>
                 <h5 class="pre-title">Hell and Silence</h5>
               </div>
@@ -99,8 +99,8 @@
                 <button type="button" class="play disco01">play</button>
               </div>
             </li>
-            <li class="disco-list-item">
-              <div>
+            <li class="disco-list-item flex">
+              <div class="disco-list-item-div">
                 <span class="article-year">2012</span>
                 <h5 class="pre-title">Night Visions</h5>
               </div>
@@ -121,8 +121,8 @@
                 <button type="button" class="play disco02">play</button>
               </div>
             </li>
-            <li class="disco-list-item">
-              <div>
+            <li class="disco-list-item flex">
+              <div class="disco-list-item-div">
                 <span class="article-year">2015</span>
                 <h5 class="pre-title">Smoke + Mirrors</h5>
               </div>
@@ -198,7 +198,7 @@
           </p>
         </header>
         <ul class="latter-compositions-release">
-          <li class="latter-compositions-item">
+          <li class="latter-compositions-item flex">
             <div class="latter-compositions-wrapper">
               <span class="latter-compositions-year">03.04.2015</span>
               <h5 class="latter-compositions-album">Indian Sammer</h5>
@@ -266,7 +266,7 @@
             <img class="letter-img" src="img/latter01.jpg" alt="latter01" />
 
           </li>
-          <li class="latter-compositions-item">
+          <li class="latter-compositions-item flex reverse">
             <div class="latter-compositions-wrapper">
               <span class="latter-compositions-year">20.07.2015</span>
               <h5 class="latter-compositions-album">Indian Sammer Remix</h5>
@@ -332,7 +332,7 @@
             <img class="letter-img" src="img/latter02.jpg" alt="latter02" />
 
           </li>
-          <li class="latter-compositions-item">
+          <li class="latter-compositions-item flex">
             <div class="latter-compositions-wrapper">
               <span class="latter-compositions-year">03.04.2015</span>
               <h5 class="latter-compositions-album">Chill Nation</h5>
@@ -458,7 +458,7 @@
             </div>
           </div>
         </header>
-        <ul class="lead-singer-songs container list">
+        <ul class="lead-singer-songs container list flex wrap">
           <li class="lead-singer-item digital_one digital_bgr lead_number">
             <div class="lead-singer-wrapper">
               <span class="lead-singer-date">03.04.2015</span>
@@ -539,9 +539,9 @@
         </ul>
       </section>
       <section class="upcoming">
-        <header class="upcoming-head">
+        <header class="upcoming-head flex column end">
           <h2 class="upcoming-title title-h2">Upcoming Events</h2>
-          <div>
+          <div class="flex column end">
             <h3 class="upcoming-item">Smoke + Mirrors Tour</h3>
             <p class="upcoming-adress">
               2-2-15 Hokukoryokuchi, Konohana Ward,<br />
